# diagoriente-oplc

./: .dockerignore  .gitignore  Pipfile  Readme.md  build.sh  pyrightconfig.json  release-production.sh  run-production.sh  version.sh
api/: Pipfile  pyrightconfig.json  up.sh
api/src/: action.py  api.py  config.py  model.py  view.py
backend/Oplc/: Project.toml  bootstrap.jl  routes.jl
backend/Oplc/src/: Oplc.jl
backend/Oplc/test/: runtests.jl
backend/python/: requirements-dev.txt  requirements.txt
backend/python/oplc/: api.py  (+10 more)
case-studies/: Pipfile  Untitled.ipynb  main.py  skill_accessibility.py  skill_distance.py  skill_importance_measure.py  streamlit_pages.py  up.sh
case-studies/pages/: Comparaison_de_mesures_de_centralité.py  Mesurer_l'accessibilité_d'un_métier.py  Mesurer_l'accessibilité_d'une_compétence.py
docker/: api.Dockerfile  backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile  streamlit.Dockerfile
docs/: Model_design.ipynb  Pipfile
etl/: Pipfile  setup.cfg
etl/src/diagoriente_oplc_etl.egg-info/: PKG-INFO  SOURCES.txt
etl/src/oplc_etl/: check.py  pipelines.py
etl/src/oplc_etl/pipelines/: __init__.py  google_spreadsheet.py  neo4j.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.tsx
model/: LICENSE  Pipfile  README.md  pyrightconfig.json  setup.cfg  upload_package.sh
ui/: Pipfile  up.sh
ui/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  skill_importance_measure-checkpoint.ipynb
ui/pages/: Comparaison_de_distances_entre_compétences.py  Mesurer_l'accessibilité_d'un_métier.py
(+35 files in other folders)
