[metadata]
name = diagoriente-oplc-etl
version = 0.0.1
author = Guillaume Chérel
author_email = guillaume.cherel@cosimus.com
description = ETL pipelines for Diagoriente OPLC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    requests
    neo4j

[options.packages.find]
where = src
